# 3D-Medical-Imaging

./: README.md
ClassificationITK/src/: CMakeLists.txt  CMakeLists.txt~  ClassificationITK.cxx  ClassificationITK.cxx~
KMeans3DVisualizer/: CMakeLists.txt
KMeans3DVisualizer/src/: KMeans3DVisualizer.cxx  KMeans3DVisualizer.cxx~
